[package]
name = "egui_website"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
env_logger = "0.10.0"
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.78"
log = "0.4.14"
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ["Window", "Document", "HtmlElement"] }

[lib]
crate-type = ["cdylib", "rlib"]
